--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ loader_version=0.12.12
 
 # Mod Properties
 mod_version=0.1
-maven_group=dummy.package
-archives_base_name=addon-template
+maven_group=me.mathrandom7910
+archives_base_name=autovclip
 
 # Dependency Versions
 
